# linera.dev

./: .gitignore  AGENTS.md  AI_PATTERN_CLEANUP_REPORT.md  CLAUDE.md  Makefile  README.md  workflow-execution-summary.md
docs/: CLAUDE.md  INFRASTRUCTURE_ANALYSIS.md  INFRASTRUCTURE_REPORT.md  REALITY_CHECK.md
docs/PROPOSAL/: CLAUDE.md  linera-multisig-platform-proposal.md
docs/api/: README.md  cli-reference.md  graphql-api.md  grpc-api.md  sdk-api.md  typescript-sdk.md
docs/diagrams/: README.md  application-architecture.md  message-flow.md  microchain-lifecycle.md  multisig-flow.md  system-architecture.md  validator-architecture.md
docs/fundamentals/: README.md  messaging.md  ownership.md
docs/multisig-custom/: ADVERSARIAL_AUDIT_CURRENT.md  ARCHITECTURE.md  AUDIT.md  IMPLEMENTATION_VALIDATION.md  OPERATIONS.md  README.md  UNIT_TESTS.md  VALIDATION_SCRIPT.md
docs/reports/: COMPREHENSIVE_TEST_REPORT.md
docs/research/: ASYNC_GRAPHQL_DOWNGRADE_ATTEMPTS.md  AUDIT_SUMMARY.md  (+14 more)
experiments/threshold-signatures/: Cargo.toml  README.md
experiments/threshold-signatures/docs/: ARCHITECTURE.md
experiments/threshold-signatures/src/: lib.rs  main.rs  operations.rs  state.rs
open-agents/: CLAUDE.md  INSTRUCTIONS.md  README.md
scripts/: CLAUDE.md  ENV_SETUP.md  MULTISIG_TESTING_GUIDE.md  Makefile  README.md  SUMMARY.md  multisig-test-cli.sh  multisig-test-rust.sh  test-wasm-binaries.sh
scripts/multisig-app/: Cargo.toml  README.md  WASM_VALIDATION.md  build.sh
scripts/multisig-app/.cargo/: config.toml
scripts/multisig-app/src/: contract.rs  lib.rs  service.rs  state.rs
scripts/multisig-app/tests/: README.md  multisig_tests.rs
(+37 files in other folders)
